# open-hw-validation-harness

./: .gitignore  LICENSE  README.md  architecture.md  getting_started.md  pyproject.toml  requirements.txt
artifacts/: results_periph_ctrl.xml  results_reg8.xml
artifacts/sim_build/periph_ctrl/: Vtop  Vtop.cpp  Vtop.h  Vtop.mk  Vtop__Syms.cpp  Vtop__Syms.h  Vtop__Trace__0.cpp  Vtop__Trace__0__Slow.cpp  Vtop___024root.h  Vtop___024root__DepSet_heccd7ead__0.cpp  Vtop___024root__DepSet_heccd7ead__0__Slow.cpp  Vtop___024root__Slow.cpp  Vtop__ver.d
artifacts/sim_build/reg8/: Vtop  Vtop.cpp  Vtop.h  Vtop.mk  Vtop__Syms.cpp  Vtop__Syms.h  Vtop__Trace__0.cpp  Vtop__Trace__0__Slow.cpp  Vtop___024root.h  Vtop___024root__DepSet_heccd7ead__0.cpp  Vtop___024root__DepSet_heccd7ead__0__Slow.cpp  Vtop__ver.d  verilator.d
docs/: adding_a_project.md  architecture.md  getting_started.md  phase5_target_aware.md  roadmap.md
framework/: __init__.py  project.py  result_parser.py  target_checker.py  tool_check.py
framework/boards/: __init__.py  base_board.py  common_checks.py  de0_cv.py  de10_standard.py  de25_standard.py  registry.py
projects/periph_ctrl/: project.yaml
projects/periph_ctrl/sim/: Makefile  (+2 more)
projects/reg8/: project.yaml
projects/template/: project.yaml
rtl/example_dut/: periph_ctrl.v
scripts/: run_regression.py
sim/cocotb/: Makefile  dump.vcd
sim/periph_ctrl/: Makefile  reg_driver.py
tb/backends/: hardware_backend_stub.py  sim_backend.py
tb/config/: default.yaml
tb/drivers/: register_driver.py
tb/utils/: logging_utils.py
tests/: test_smoke.py
(+6 files in other folders)
